--- a/_content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc
+++ b/_content/misc_docs/lyrics/010_battle_hymn_for_fair_and_share.adoc
@@ -14,12 +14,13 @@
 
 ++++
 
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/5RkRsYhIPbE3z4oVljdoA4?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/5RkRsYhIPbE3z4oVljdoA4?utm_source=generator&theme=0" width="320px" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ++++
 
 _Lyrics by Vector Hasting, written to the tune of "Glory Hallelujah" composed by link:https://en.wikipedia.org/wiki/William_Steffe["William Steffe,",window=read-later,opts="noopener,nofollow"]_ +
-_The Lyrical structure matches that of link:https://en.wikipedia.org/wiki/Julia_Ward_Howe["Julia Ward Howe's",window=read-later,opts="noopener,nofollow"] poem "The Battle Hymn of the Republic"_
+_The Lyrical structure matches that of link:https://en.wikipedia.org/wiki/Julia_Ward_Howe["Julia Ward Howe's",window=read-later,opts="noopener,nofollow"] poem "The Battle Hymn of the Republic"_ +
+_Performances by link:https://suno.com/["Suno AI", window=read-later,opts="noopener,nofollow"]_
 
 Mine eyes have seen the glory of a hope for fair reward +
 To millions who now die to feed the wealth of overlords. +
