--- a/_content/phase_1_winning/stage_00/stg00_030_stages_defined.adoc
+++ b/_content/phase_1_winning/stage_00/stg00_030_stages_defined.adoc
@@ -1,4 +1,4 @@
-# Stages Defined
+# Definitions of the Stages of Project Liberty 2029
 :doctype: book
 :table-caption: Data Set
 :imagesdir: /content/media/images/
@@ -13,7 +13,7 @@
 
 Restoring and re-securing our liberties will require concerted effort over a long period of time. 
 
-We are defining the stages of this conflict so that documents which pertain to a particular stage can be labeled in their "front matter" (see <<content/Sample_Doc.adoc#"Front Matter",Front Matter on the Sample Pages document.>> 
+We are defining the stages of this conflict so that documents which pertain to a particular stage can be labeled in their "front matter" (see <</content/phase_1_winning/stage_00/contributing/060_sample_document.adoc#,Front Matter on the Sample Pages document.>> 
 
 Documents will appear on the Index page under the "Conflict Stage" depending on this number. 
 
