--- a/index.adoc
+++ b/index.adoc
@@ -119,7 +119,7 @@ This is sorted by 10 stages between when this project began in Summer 2025 and J
         like 010_ThingOne, 020_AnotherThing, regardless of the logical title for them.
       {% endcomment %}
       {% assign p1_stage_docs = site.content | where: "stage", p1_stages.name %}
-      {% assign p1_sorted_stage_docs = p1_stage_docs | sort_natural: "basename" %}
+      {% assign p1_sorted_stage_docs = p1_stage_docs | sort_natural: "document.name" %}
 
       {% for document in p1_sorted_stage_docs %}
         <li class="index-list"><a href="{{ document.url }}">{{ document.title }}</a>
@@ -188,7 +188,7 @@ This is sorted by 10 stages between when this project began in Summer 2025 and J
         like 010_ThingOne, 020_AnotherThing, regardless of the logical title for them.
       {% endcomment %}
       {% assign p2_stage_docs = site.content | where: "stage", p2_stages.name %}
-      {% assign p2_sorted_stage_docs = p2_stage_docs | sort: "basename" %}
+      {% assign p2_sorted_stage_docs = p2_stage_docs | sort_natural: "document.name" %}
 
       {% for document in p2_sorted_stage_docs %}
         <li class="index-list"><a href="{{ document.url }}">{{ document.title }}</a>
@@ -257,7 +257,7 @@ This is sorted by 10 stages between when this project began in Summer 2025 and J
         like 010_ThingOne, 020_AnotherThing, regardless of the logical title for them.
       {% endcomment %}
       {% assign px_stage_docs = site.content | where: "stage", px_stages.name %}
-      {% assign px_sorted_stage_docs = px_stage_docs | sort: "basename" %}
+      {% assign px_sorted_stage_docs = px_stage_docs | sort_natural: "document.name" %}
 
       {% for document in px_sorted_stage_docs %}
         <li class="index-list"><a href="{{ document.url }}">{{ document.title }}</a>
